// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Input With Addon After 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > div {
  height: 32px;
  padding: 5px 12px;
  font-size: 14px;
  text-align: center;
  background: #fafafa;
  border-top: 1px solid #d9d9d9;
  border-bottom: 1px solid #d9d9d9;
}

.c0 > div.before {
  border-left: 1px solid #d9d9d9;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c0 > div.after {
  border-right: 1px solid #d9d9d9;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c1 {
  width: 100%;
  height: 32px;
  background: #fff;
  border: 1px solid #d9d9d9;
  border-top-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 2px;
}

.c1:disabled {
  cursor: not-allowed;
  background: #fafafa;
}

<div
  className="c0"
>
  <input
    className="c1"
    placeholder="Input with addonAfter"
    type="text"
  />
  <div
    className="after"
  >
    after
  </div>
</div>
`;

exports[`FileProperties Input With Addon Before 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > div {
  height: 32px;
  padding: 5px 12px;
  font-size: 14px;
  text-align: center;
  background: #fafafa;
  border-top: 1px solid #d9d9d9;
  border-bottom: 1px solid #d9d9d9;
}

.c0 > div.before {
  border-left: 1px solid #d9d9d9;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.c0 > div.after {
  border-right: 1px solid #d9d9d9;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.c1 {
  width: 100%;
  height: 32px;
  background: #fff;
  border: 1px solid #d9d9d9;
  border-top-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 0;
}

.c1:disabled {
  cursor: not-allowed;
  background: #fafafa;
}

<div
  className="c0"
>
  <div
    className="before"
  >
    before
  </div>
  <input
    className="c1"
    placeholder="Input with addonBefore"
    type="text"
  />
</div>
`;
